# GreenVLA

./: .gitattributes  .gitignore  LICENSE  README.md  accelerate_config.yaml  pyproject.toml
docs/: FINE_TUNING.md  INFERENCE.md
examples/: example_inference_bridge.py  example_inference_calvin.py  example_inference_fractal.py  example_vqa.ipynb
lerobot/common/datasets/: cotrain_dataset.py  create_dataloader.py  data_config.py  fake_dataset.py  lerobot_dataset.py  torch_transforms.py  transforms.py  utils.py  video_utils.py
lerobot/common/datasets/data_transforms/robots/: agibot_dexhand.py  agibot_twofinger.py  aloha.py  bridge.py  calvin.py  centaur_dexhand.py  cobot_magic.py  droid.py  fourier_gr1.py  fractal.py  galaxea_r1_lite.py  realsource_world.py  robocoin_agibot.py  robocoin_airbot.py  robocoin_alpha_bot.py  robocoin_leju.py  robocoin_r1_lite.py  (+3 more)
lerobot/common/datasets/qwen_vlm_datasets/: qwen_vlm_dataset.py
lerobot/common/optim/: schedulers.py
lerobot/common/policies/: __init__.py  factory.py  pretrained.py  utils.py
lerobot/common/policies/greenvla_policy/: configuration_greenvla_policy.py  greenvla_tokenizer.py  greenvla_utils.py  modeling_greenvla_policy.py
lerobot/common/utils/: image_tools.py  inference_transforms.py  normalize.py  seed_utils.py  torch_observation.py  train_utils.py  utils.py
lerobot/conf/: finetune_greenvla_bridge.yaml  finetune_greenvla_fractal.yaml
lerobot/conf/image_augmentations/: easy.yaml  hard.yaml  medium.yaml
lerobot/conf/logging/: clearml.yaml  wandb.yaml
lerobot/conf/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
lerobot/conf/policy/: greenvla_policy.yaml
lerobot/conf/qwen_vlm_dataset/individual/: aokvqa.yaml  mscoco.yaml  objectnet3d.yaml  open_spaces.yaml  pixmo_pointing.yaml  refspatial_choice_qa_2d.yaml  refspatial_choice_qa_3d.yaml  refspatial_multi_view_qa_3d.yaml  refspatial_reasoning_template_2d.yaml  refspatial_reasoning_template_3d.yaml  refspatial_simulator_qa.yaml  refspatial_vacant_qa_3d.yaml  refspatial_visual_choice_qa_3d.yaml  robo2vlm.yaml  robopoint_gqa.yaml  robopoint_mscoco_vqa.yaml  robopoint_ocr_vqa.yaml  robopoint_pointing_reference.yaml  robopoint_textvqa.yaml  sharebot_affordance.yaml  sharebot_trajectory.yaml  sharebot_vqa.yaml  sunrgbd.yaml
lerobot/conf/qwen_vlm_dataset/mixture/: eclipse_eclair_eliminated.yaml  simple_mixture.yaml
lerobot/conf/robotics_dataset/individual/: _template.yaml  action_net.yaml  agibotworld_dexhand.yaml  agibotworld_twofinger.yaml  biplay.yaml  bridge.yaml  calvin.yaml  centaur_dexhand.yaml  droid.yaml  droid_cartesian.yaml  droid_joint.yaml  fractal.yaml  galaxeaworld.yaml  rdt.yaml  realsource_world_joint.yaml  robocoin_agibot_cartesian.yaml  robocoin_agibot_joint.yaml  robocoin_airbot.yaml  robocoin_alpha_bot_cartesian.yaml  robocoin_alpha_bot_joint.yaml  robocoin_cobot_magic.yaml  robocoin_leju_cartesian.yaml  robocoin_leju_joint.yaml  robocoin_r1_lite.yaml  robocoin_rmc_aida_cartesian.yaml  robocoin_rmc_aida_joint.yaml  robomind_tienkung.yaml  roboset.yaml
lerobot/conf/robotics_dataset/mixture/: R0_v7.yaml  bridge.yaml  calvin.yaml  fractal.yaml
lerobot/conf/scheduler/: constant.yaml  cosine.yaml  linear.yaml  wsd.yaml
lerobot/conf/training/: default_train.yaml
lerobot/configs/: default.py  policies.py  train.py
lerobot/scripts/: compute_dataset_stats.py  train_with_validation.py
